force-app/main/default/objects/MyProduct__c/MyProduct__c.object-meta.xml
<CustomObject>
    <label>MyProduct</label>
    <nameField>
        <displayFormat>MYN-{0}</displayFormat>
        <label>MyProduct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyProduct</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>