force-app/main/default/objects/MyProduct__c/fields/ProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>ProfitMargin__c</fullName>
    <label>ProfitMargin</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>