force-app/main/default/objects/MyProduct__c/fields/SellingPrice__c.field-meta.xml
<CustomField>
    <fullName>SellingPrice__c</fullName>
    <label>SellingPrice</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>